--- a/wallet/Views/Credentials/Authorize.cshtml
+++ b/wallet/Views/Credentials/Authorize.cshtml
@@ -22,10 +22,11 @@
         @foreach (var credential in Model)
         {
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="cred_id" id="@credential.jti" value="@credential.jti">
+                <input class="form-check-input p-1" type="radio" name="cred_id" id="@credential.jti" value="@credential.jti">
                 <label class="form-check-label" for="@credential.jti">
                     @credential.jti
                 </label>
+                <button type="button" class="btn btn-link p-0" onclick="showDetailsModal('@credential.Id')">Details</button>
             </div>
         }
         <br/>
@@ -33,3 +34,33 @@
         <a class="btn btn-link" asp-action="Index" role="button">Cancel</a>
     </form>
 </div>
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="detailsModalLabel">Verifiable Credential</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <code><pre id="details"></pre></code>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+@section Scripts {
+    <script>
+        function showDetailsModal(id) {
+            document.getElementById('details').innerHTML = "";
+            var request = fetch('/Credentials/Details/' + id).then((response) => {
+                response.text().then((data) => {
+                    document.getElementById('details').innerHTML = data
+                })
+            })
+            const offerModal = new bootstrap.Modal(document.getElementById('detailsModal'), {})
+            offerModal.show();
+        }
+    </script>
+}
