--- a/wallet/Views/Credentials/Index.cshtml
+++ b/wallet/Views/Credentials/Index.cshtml
@@ -29,7 +29,7 @@
                 <td>@Html.DisplayFor(modelItem => item.type)</td>
                 <td>@Html.DisplayFor(modelItem => item.iss)</td>
                 <td>
-                    <a class="btn" onclick="showDetailsModal()">
+                    <a class="btn" onclick="showDetailsModal('@item.Id')">
                         <img src="~/img/info.svg" alt="details" title="Details" height="25"><br />
                         <small>Details</small>
                     </a>
@@ -41,3 +41,34 @@
             </tr>
         }
 </table>
+
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="detailsModalLabel">Verifiable Credential</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <code><pre id="details"></pre></code>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+@section Scripts {
+    <script>
+        function showDetailsModal(id) {
+            document.getElementById('details').innerHTML = "";
+            var request = fetch('/Credentials/Details/' + id).then((response) => {
+                response.text().then((data) => {
+                    document.getElementById('details').innerHTML = data
+                })
+            })
+            const offerModal = new bootstrap.Modal(document.getElementById('detailsModal'), {})
+            offerModal.show();
+        }
+    </script>
+}
