--- a/wallet/Views/Didself/Create.cshtml
+++ b/wallet/Views/Didself/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Didself
+﻿@model CloudWallet.Models.Didself.Didself
 
 <h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
 <hr />
