--- a/wallet/Views/Didself/Index.cshtml
+++ b/wallet/Views/Didself/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Didself>
+﻿@model IEnumerable<CloudWallet.Models.Didself.Didself>
 
 <h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
 <hr/>
@@ -72,6 +72,5 @@
             const offerModal = new bootstrap.Modal(document.getElementById('detailsModal'), {})
             offerModal.show();
         }
-
     </script>
 }
