--- a/wallet/Views/Didself/Manage.cshtml
+++ b/wallet/Views/Didself/Manage.cshtml
@@ -1,4 +1,6 @@
-﻿<h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
+﻿@using CloudWallet.Models.Didself
+@model Delegation
+<h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
 <hr/>
 <nav aria-label="breadcrumb">
      <ol class="breadcrumb">
@@ -9,94 +11,29 @@
 </nav>
 
 <div class="accordion" id="didSelf">
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-               Authentication key
-            </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#didSelf">
-            <div class="accordion-body">
-                <p>Select the key that should be used as an authentication key</p>
-                <table class="table table-hover w-75">
-                    <thead>
-                        <tr>
-                            <th scope="col"></th>
-                            <th style="width: 70%" scope="col">Key identifier</th>
-                            <th scope="col">Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked></td>
-                        <td>#key1</td>
-                        <td>
-                            <a class="btn">
-                                <img src="~/img/info.svg" alt="details" title="Details" height="25"><br />
-                                <small>Details</small>
-                            </a>
-                            <a class="btn">
-                                <img src="~/img/delete.svg" alt="key" title="Delete" height="25"><br />
-                                <small>Delete</small>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><input class="form-check-input" type="checkbox" value="" id="flexCheckChecked"></td>
-                        <td>#key2</td>
-                        <td>
-                            <a class="btn">
-                                <img src="~/img/info.svg" alt="details" title="Details" height="25"><br />
-                                <small>Details</small>
-                            </a>
-                            <a class="btn">
-                                <img src="~/img/delete.svg" alt="key" title="Delete" height="25"><br />
-                                <small>Delete</small>
-                            </a>
-                        </td>
-                        
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Attestation key
-            </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#didSelf">
-            <div class="accordion-body">
-            </div>
-        </div>
-    </div>
+    
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button show" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 Delegations
             </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#didSelf">
+        <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#didSelf">
             <div class="accordion-body">
-                <form>
+                <form asp-action="Delegate" method="post">
+                    <input type="hidden" asp-for="DidSelfId" value="@ViewData["DidSelfId"]" />
                     <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Enable Delegation</label>
+                        <input type="checkbox" class="form-check-input" asp-for="isEnabled">
+                        <label class="form-check-label" asp-for="isEnabled" >Enable Delegation</label>
                     </div>
                      <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Client authentication method</label>
-                        <select class="form-select mb-3" aria-label=".form-select-lg example">
-                            <option selected>Select authentication method...</option>
-                            <option value="1">Certificate issued by trusted entity</option>
-                            <option value="2">Public key</option>
-                            <option value="3">Decentralized Identifier</option>
+                        <select asp-for="AuthType" asp-items="@Delegation.AuthTypes" class="form-select">
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Client authentication data</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control" asp-for="AuthClaim" rows="3"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
