--- a/wallet/Views/Credentials/Offer.cshtml
+++ b/wallet/Views/Credentials/Offer.cshtml
@@ -28,6 +28,12 @@
                     <input type="text" class="form-control" id="preAuthorizedCode" name="preAuthorizedCode" readonly value="@ViewData["preAuthorizedCode"]" />
                 </div>
             </div>
+            <div class="mb-3 row">
+                <label for="credentialType" class="col-sm-2 col-form-label">Type</label>
+                <div class="col-sm-4">
+                    <input type="text" class="form-control" id="credentialType" name="credentialType" readonly value="@ViewData["credentialType"]" />
+                </div>
+            </div>
             <div class="form-group mb-3">
                 <label for="listGroupRadio" class="form-label">Select DID</label>
                 <ul class="list-group">
