--- a/wallet/Views/Shared/_Layout.cshtml
+++ b/wallet/Views/Shared/_Layout.cshtml
@@ -70,6 +70,15 @@
 							<span class="align-bottom">About</span>
 						</a>
 					</li>
+					<li class="nav-item">
+						@if (User.Identity != null && User.Identity.IsAuthenticated)
+						{
+							<a asp-controller="Account" asp-action="Logout" class="btn btn-light w-100 text-start">
+								<img src="~/img/logout.svg" width="25" height="25">
+								<span class="align-bottom">Logout</span>
+							</a>
+						}
+					</li>
 					</ul>
 			</div>
 			<div class="col py-3">
