--- a/wallet/Views/Credentials/Authorize.cshtml
+++ b/wallet/Views/Credentials/Authorize.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CloudWallet.Models.Credential>
+﻿@model IEnumerable<Wallet.Models.Credential>
 
 <div class="container w-50 p-2  border rounded-1">
     <h2>Access request</h2>
