--- a/wallet/Views/Credentials/Index.cshtml
+++ b/wallet/Views/Credentials/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CloudWallet.Models.Credential>
+﻿@model IEnumerable<Wallet.Models.Credential>
 <h2 class="p-2 bg-light border rounded-1">Credentials</h2>
 <hr/>
 <nav aria-label="breadcrumb">
