--- a/wallet/Views/Credentials/Offer.cshtml
+++ b/wallet/Views/Credentials/Offer.cshtml
@@ -1,7 +1,5 @@
-﻿@using CloudWallet.Models.Didself
-@{
-    var dids = ViewData["DIDs"] as List<Didself>;
-}
+﻿@model Wallet.Models.CredentialOfferRequest
+
 <h2 class="p-2 bg-light border rounded-1">Credentials</h2>
 <hr />
 <nav aria-label="breadcrumb">
@@ -15,38 +13,43 @@
     <h5 class="card-header">Add new credential</h5>
     <div id="form" class="m-3">
         <form asp-action="Create">
+            <input type="hidden" asp-for="PreAuthorizedCode" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3 row">
                 <label for="issuerURL" class="col-sm-2 col-form-label">Credential Issuer</label>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" id="issuerURL" name="issuerURL" readonly value="@ViewData["issuerURL"]" />
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="preAuthorizedCode" class="col-sm-2 col-form-label">Pre-authorized code</label>
-                <div class="col-sm-4">
-                    <input type="text" class="form-control" id="preAuthorizedCode" name="preAuthorizedCode" readonly value="@ViewData["preAuthorizedCode"]" />
+                    <input type="text" class="form-control" asp-for="IssuerURL" readonly />
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="credentialType" class="col-sm-2 col-form-label">Type</label>
                 <div class="col-sm-4">
-                    <input type="text" class="form-control" id="credentialType" name="credentialType" readonly value="@ViewData["credentialType"]" />
+                    <input type="text" class="form-control" asp-for="CredentialType" readonly />
                 </div>
             </div>
-            <div class="form-group mb-3">
-                <label for="listGroupRadio" class="form-label">Select DID</label>
-                <ul class="list-group">
-                    @foreach (var did in dids!)
-                    {
-                        <li class="list-group-item">
-                            <input class="form-check-input me-1" type="radio" name="did" value="@did.Id" id="@did.Id">
-                            <label class="form-check-label" for="firstRadio">@did.Name</label>
-                        </li>
-                    }
-                </ul>
+            <div class="mb-3 row">
+                <label asp-for="AuthType" class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-4">
+                    <select onchange="getAuthClaims()" asp-for="AuthType" asp-items="@Wallet.Models.CredentialOfferRequest.Types" class="form-select">
+                    </select>
+                </div>
             </div>
             <input type="submit" class="btn btn-primary" value="Add">
         </form>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        function getAuthClaims() {
+            var type = document.getElementById("AuthType").value;
+            if (type == 2) {
+                var request = fetch('/Certificates/List').then((response) => {
+                    response.text().then((data) => {
+                        console.log(data)
+                    })
+                })
+            }
+        }
+     </script>
+}
