--- a/wallet/Views/Didself/Manage.cshtml
+++ b/wallet/Views/Didself/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@using CloudWallet.Models.Didself
+﻿@using Wallet.Models.Didself
 @model Delegation
 <h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
 <hr/>
