--- a/wallet/Views/Publickey/Index.cshtml
+++ b/wallet/Views/Publickey/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CloudWallet.Models.Publickey>
+﻿@model IEnumerable<Wallet.Models.Publickey>
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
