--- a/wallet/Views/Shared/_Layout.cshtml
+++ b/wallet/Views/Shared/_Layout.cshtml
@@ -25,10 +25,10 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="btn btn-light w-100 text-start">
-							<img src="~/img/key.svg" width="25" height="25">
-							<span class="align-bottom">Public keys</span>
-						</a>
+                        <a asp-controller="Certificates" asp-action="Index" class="btn btn-light w-100 text-start @(ViewContext.RouteData.Values["Controller"]?.ToString() == "Certifiactes" ? "active" : "")">
+                            <img src="~/img/key.svg" width="25" height="25">
+                            <span class="align-bottom">Certificates</span>
+                        </a>
 					</li>
 					<li class="nav-item">
 						<a class="btn btn-light w-100 text-start dropdown-toggle" href="#didmethods" data-bs-toggle="collapse" aria-expanded="false" aria-controls="didmethods">
