--- a/wallet/Views/_ViewImports.cshtml
+++ b/wallet/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CloudWallet
-@using CloudWallet.Models
+﻿@using Wallet
+@using Wallet.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
