--- a/wallet/Views/Credentials/Authorize.cshtml
+++ b/wallet/Views/Credentials/Authorize.cshtml
@@ -19,15 +19,17 @@
     </div>
     <form method="post">
         <p>Select the credential to submit:</p>
+        @{int index = 0;}
         @foreach (var credential in Model)
         {
             <div class="form-check">
-                <input class="form-check-input p-1" type="radio" name="cred_id" id="@credential.jti" value="@credential.jti">
+                <input class="form-check-input p-1" type="checkbox" name="credIds[@index]" id="credIds[@index]" value="@credential.jti">
                 <label class="form-check-label" for="@credential.jti">
                     @credential.jti
                 </label>
                 <button type="button" class="btn btn-link p-0" onclick="showDetailsModal('@credential.Id')">Details</button>
             </div>
+            index++;
         }
         <br/>
         <button type="submit" class="btn btn-warning">Allow</button>
