--- a/issuer/Views/Shared/_Layout.cshtml
+++ b/issuer/Views/Shared/_Layout.cshtml
@@ -14,22 +14,22 @@
                     <img src="~/img/logo.svg" alt="excid logo" height="60" class="d-inline-block align-text-top">
                 </a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">IAM</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
-                    </li>
-                </ul>
-               <ul class="nav navbar-nav navbar-right">
-                    @if (User.Identity!=null && User.Identity.IsAuthenticated)
-                    {
-                        <li><a class="btn btn-primary" asp-controller="Account" asp-action="Logout">Logout</a></li>
-                    }
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">IAM</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Support</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        @if (User.Identity != null && User.Identity.IsAuthenticated)
+                        {
+                            <li><a class="btn btn-primary" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -40,7 +40,7 @@
             @RenderBody()
         </div>
     </main>
-
+    <div style="clear:both;height:60px"></div>
     <footer class="footer mt-auto py-3 bg-light fixed-bottom">
         <div class="container text-md-center">
             &copy; 2023 Internet Identity Security and Privacy Solutions P.C. (ExcID)
