--- a/wallet/Views/Credentials/Offer.cshtml
+++ b/wallet/Views/Credentials/Offer.cshtml
@@ -32,6 +32,9 @@
                 <div class="col-sm-4">
                     <select onchange="getAuthClaims()" asp-for="AuthType" asp-items="@Wallet.Models.CredentialOfferRequest.Types" class="form-select">
                     </select>
+                    <div class="mt-3" id="AuthClaims">
+
+                    </div>
                 </div>
             </div>
             <input type="submit" class="btn btn-primary" value="Add">
@@ -42,7 +45,26 @@
 @section Scripts {
     <script>
         function getAuthClaims() {
+            var authClaimsDiv = document.getElementById("AuthClaims");
+            authClaimsDiv.innerHTML = "";
             var type = document.getElementById("AuthType").value;
+            if (type == 1) {
+                var request = fetch('/Didself/List').then((response) => {
+                    response.text().then((data) => {
+                        const obj = JSON.parse(data);
+                        for (var i = 0; i < obj.length; i++) {
+                            authClaimsDiv.innerHTML +=`
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="AuthClaimId" id="${obj[i].id}" value="${obj[i].id}">
+                                    <label class="form-check-label" for="${obj[i].id}">
+                                        ${obj[i].name}
+                                    </label>
+                            </div>`
+                        }
+
+                    })
+                })
+            }
             if (type == 2) {
                 var request = fetch('/Certificates/List').then((response) => {
                     response.text().then((data) => {
