--- a/issuer-2/Views/Role/Index.cshtml
+++ b/issuer-2/Views/Role/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@using iam.Models.RelBAC
+﻿@using iam.Models.Role
 @model IEnumerable<Authorization>
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-        <li class="breadcrumb-item active">Authorizations</li>
+        <li class="breadcrumb-item active">Assignments</li>
     </ol>
 </nav>
 <div class="btn-toolbar" role="toolbar" aria-label="...">
@@ -26,7 +26,7 @@
         {
             <tr>
                 <td class="align-middle">@Html.DisplayFor(modelItem => item.Name)</td>
-                <td class="align-middle">@Html.Raw(item.Revoked ? "Revoked" : "Active")</td>
+                <td class="align-middle">@Html.Raw(item.Revoked?"Revoked":"Active")</td>
                 <td>
                     <a class="btn" onclick="showDetailsModal('@item.Id')">
                         <img src="img/info.svg" alt="details" title="Details" height="25"><br />
@@ -91,7 +91,7 @@
 @section Scripts {
     <script>
         function showOfferModal(code) {
-            const walletURL = "http://localhost:8002/Credentials/Offer?credential_offer_uri=" + encodeURIComponent("http://localhost:8001/Offer/Index/" + code);
+            const walletURL = "@ViewData["wallet_url"]/Credentials/Offer?credential_offer_uri=" + encodeURIComponent("@ViewData["iss_url"]/Offer/Index/" + code);
             document.getElementById('credentialOffer').value = walletURL;
             document.getElementById('credentialOffer').aria = walletURL;
             document.getElementById('credentialOfferHref').href = walletURL;
@@ -101,7 +101,7 @@
 
         function showDetailsModal(id) {
             document.getElementById('relations').innerHTML = "";
-            var request = fetch('/RelBAC/Details/' + id).then((response) => {
+            var request = fetch('/Role/Details/' + id).then((response) => {
                 response.text().then((data) => {
                     document.getElementById('relations').innerHTML = data
                 })
