--- a/wallet/Views/Credentials/AddDelegation.cshtml
+++ b/wallet/Views/Credentials/AddDelegation.cshtml
@@ -1,21 +1,20 @@
 ﻿@using Wallet.Models;
-@using Wallet.Models.Didself
 @model Delegation
-@{var authClaim = ViewData["did"] as Didself;}
+@{var authClaim = ViewData["vc"] as Credential;}
 
-<h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
+<h2 class="p-2 bg-light border rounded-1">Credentials</h2>
 <hr />
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-        <li class="breadcrumb-item"><a asp-controller="Didself" asp-action="Index">DIDs</a></li>
-        <li class="breadcrumb-item active">@authClaim!.Name</li>
+        <li class="breadcrumb-item"><a asp-action="Index">Credentials</a></li>
+        <li class="breadcrumb-item active">@authClaim!.jti</li>
     </ol>
 </nav>
 <div class="card mt-3" id="Add">
     <h5 class="card-header">Add new delegation</h5>
     <div id="form" class="m-3">
-        <form action="/Didself/AddDelegation" method="post">
+        <form action="/Credentials/AddDelegation" method="post">
             <input type="hidden" asp-for="ObjectId" value="@authClaim!.Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row mb-3">
@@ -54,13 +53,13 @@
                         const obj = JSON.parse(data);
                         for (var i = 0; i < obj.length; i++) {
                             var html = `
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="AuthClaim" id="${obj[i].username}" value="${obj[i].username}">
-                                        <label class="form-check-label" for="${obj[i].username}">
-                                            ${obj[i].username}
-                                        </label>
-                                </div>`
-
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="AuthClaim" id="${obj[i].username}" value="${obj[i].username}">
+                                    <label class="form-check-label" for="${obj[i].username}">
+                                        ${obj[i].username}
+                                    </label>
+                            </div>`
+                           
                             objectIdsDiv.innerHTML += html
                         }
                     })
