--- a/wallet/Views/Credentials/Delegate.cshtml
+++ b/wallet/Views/Credentials/Delegate.cshtml
@@ -1,14 +1,14 @@
-﻿@using Wallet.Models.Didself;
+﻿@using Wallet.Models;
 @model IEnumerable<Delegation>
-@{var authClaim = ViewData["did"] as Didself;}
+@{var authClaim = ViewData["vc"] as Credential;}
 
-<h2 class="p-2 bg-light border rounded-1">did:self Identifiers</h2>
+<h2 class="p-2 bg-light border rounded-1">Credentials</h2>
 <hr />
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-        <li class="breadcrumb-item"><a asp-controller="Didself" asp-action="Index">DIDs</a></li>
-        <li class="breadcrumb-item active">@authClaim!.Name</li>
+        <li class="breadcrumb-item"><a asp-action="Index">Credentials</a></li>
+        <li class="breadcrumb-item active">@authClaim!.jti</li>
     </ol>
 </nav>
 <div class="btn-toolbar" role="toolbar" aria-label="...">
