--- a/wallet/Views/Credentials/Index.cshtml
+++ b/wallet/Views/Credentials/Index.cshtml
@@ -9,15 +9,18 @@
 </nav>
 <div class="btn-toolbar" role="toolbar" aria-label="...">
     <a class="btn" asp-action="Create">
-        <img src="~/img/add.svg" alt="Create"><br />Add
+        <img src="~/img/add.svg" alt="Create" style="width:25px"><br />Add
+    </a>
+    <a class="btn" asp-action="Import">
+        <img src="~/img/import.svg" alt="Import" style="width:25px"><br />Import
     </a>
 </div>
 <table class="table table-striped panel">
     <thead>
         <tr>
-            <th style="width: 20%" scope="col">Credential</th>
-            <th style="width: 20%" scope="col">Type</th>
-            <th style="width: 30%" scope="col">Issued by</th>
+            <th style="width: 35%" scope="col">Credential</th>
+            <th style="width: 15%" scope="col">Type</th>
+            <th style="width: 25%" scope="col">Issued by</th>
             <th scope="col">Actions</th>
         </tr>
     </thead>
@@ -32,6 +35,10 @@
                     <a class="btn" onclick="showDetailsModal('@item.Id')">
                         <img src="~/img/info.svg" alt="details" title="Details" height="25"><br />
                         <small>Details</small>
+                    </a>
+                    <a class="btn" asp-action="Delegate" asp-route-id="@item.Id">
+                        <img src="~/img/share.svg" alt="Delegate" title="Delegate" height="25"><br />
+                        <small>Delegate</small>
                     </a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn">
                         <img src="~/img/delete.svg" alt="key" title="Delete" height="25"><br />
