--- a/wallet/Views/Credentials/Offer.cshtml
+++ b/wallet/Views/Credentials/Offer.cshtml
@@ -68,7 +68,17 @@
             if (type == 2) {
                 var request = fetch('/Certificates/List').then((response) => {
                     response.text().then((data) => {
-                        console.log(data)
+                        const obj = JSON.parse(data);
+                        for (var i = 0; i < obj.length; i++) {
+                            authClaimsDiv.innerHTML += `
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="AuthClaimId" id="${obj[i].id}" value="${obj[i].id}">
+                                    <label class="form-check-label" for="${obj[i].id}">
+                                        ${obj[i].name}
+                                    </label>
+                            </div>`
+                        }
+
                     })
                 })
             }
