--- a/wallet/Views/Certificates/Edit.cshtml
+++ b/wallet/Views/Certificates/Edit.cshtml
@@ -4,14 +4,14 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
         <li class="breadcrumb-item"><a asp-controller="Certificate" asp-action="Index">Certificates</a></li>
-        <li class="breadcrumb-item active">Add</li>
+        <li class="breadcrumb-item active">Edit</li>
     </ol>
 </nav>
 <div class="card mt-3" id="Add">
     <h5 class="card-header">Add new certificate</h5>
     <div class="card-body">
         <div id="form" class="mt-3" >
-            <form asp-action="Create">
+            <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="mb-3 row">
                     <label asp-for="Name" class="col-sm-2 col-form-label"></label>
