--- a/wallet/Views/Credentials/Offer.cshtml
+++ b/wallet/Views/Credentials/Offer.cshtml
@@ -14,6 +14,7 @@
     <div id="form" class="m-3">
         <form asp-action="Create">
             <input type="hidden" asp-for="PreAuthorizedCode" />
+            <input type="hidden" asp-for="GrantType" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3 row">
                 <label for="issuerURL" class="col-sm-2 col-form-label">Credential Issuer</label>
