--- a/issuer/Views/RelBAC/Index.cshtml
+++ b/issuer/Views/RelBAC/Index.cshtml
@@ -91,7 +91,7 @@
 @section Scripts {
     <script>
         function showOfferModal(code) {
-            const walletURL = "@ViewData["wallet_url"]/Credentials/Offer?credential_offer_uri=" + encodeURIComponent("@ViewData["iss_url"]/Offer/Index/" + code);
+            const walletURL = "@ViewData["wallet_url"]/Credentials/Offer?credential_offer_uri=" + encodeURIComponent("@ViewData["Host"]/Offer/Index/" + code);
             document.getElementById('credentialOffer').value = walletURL;
             document.getElementById('credentialOffer').aria = walletURL;
             document.getElementById('credentialOfferHref').href = walletURL;
